@@ -281,6 +281,7 @@ Feature wishes:
 - PR#5555: add function Hashtbl.reset to resize the bucket table to
   its initial size.
 - PR#5586: increase UNIX_BUFFER_SIZE to 64KiB
+- PR#5597: register names for instrtrace primitives in embedded bytecode
 - PR#5599: Add warn() tag in ocamlbuild to control -w compiler switch
 - PR#5628: add #remove_directory and Topdirs.remove_directory to remove
   a directory from the load path
